--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "postinstall": "node patch.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -20,10 +21,12 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@auth0/cordova": "^0.3.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "auth0-js": "^9.10.4",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -72,7 +75,14 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-safariviewcontroller": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "trainer.app",
+        "ANDROID_SCHEME": "trainer.app",
+        "ANDROID_HOST": "dev-9svee43o.eu.auth0.com",
+        "ANDROID_PATHPREFIX": "C:/Program Files/Git/cordova/trainer.app/callback"
+      }
     },
     "platforms": [
       "android"
