--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/storage": "^2.2.0",
     "auth0-js": "^9.10.4",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
@@ -82,7 +83,8 @@
         "ANDROID_SCHEME": "trainer.app",
         "ANDROID_HOST": "dev-9svee43o.eu.auth0.com",
         "ANDROID_PATHPREFIX": "C:/Program Files/Git/cordova/trainer.app/callback"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
